--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -7,16 +7,36 @@ Celular: de 600px até 768px
 Tablet: 768px até 992px
 Desktop: 992px até 1200px
 Grandes telas: acima de 1200px
-*/
 
-@media screen and (max-width: 768px) { /* CELULAR */
+@media screen and (min-width: 768px) and (max-width: 992px) { /* TABLET */
+/*     .card-login {
+        width: 60%; */
+
+
+@media screen and (max-width: 900px) { /* CELULAR */
     .main-login {
         flex-direction: column;
     }
-}
 
-@media screen and (min-width: 768px) and (max-width: 992px) { /* TABLET */
+    .left-login > h1 {
+        display: none;
+    }
+
+    .left-login {
+        width: 100%;
+        height: auto;
+    }
+
+    .right-login {
+        width: 100%;
+        height: auto;
+    }
+
+    .left-login-image {
+        width: 50vw;
+    }
+
     .card-login {
-        width: 60%;
+        width: 70%;
     }
 }
